
Coming in build 307, as yet unreleased
--------------------------------------

### pywin32
* Fixed accidentally trying to raise a `str` instead of an `Exception` in (#2270, @Avasam)
  * `Pythonwin/pywin/debugger/debugger.py`
  * `Pythonwin/pywin/framework/dlgappcore.py`
  * `com/win32com/server/policy.py`
  * `win32/Lib/regutil.py`
  * `win32/scripts/VersionStamp/vssutil.py`
* Removed the following unused symbols. They were meant to be used as Exceptions, but were accidentally strings (#2270, @Avasam)
  * `pywin.debugger.debugger.error`
  * `pywin.framework.dlgappcore.error`
  * `win32com.server.policy.error`
  * `regutil.error`
  * `win32.scripts.VersionStamp.vssutil.error`
* Add EnumDesktopWindows (#2219, @CristiFati)
* Marked `exc_type` and `exc_traceback` in `win32comext.axscript.client.error.AXScriptException.__init__` as deprecated. (#2236 , @Avasam)
  They are now unused and all information is taken from the `exc_value` parameter.
* Fixed non-overriden `pywin.scintilla.formatter.Formatter.ColorizeString` raising `TypeError` instead of `RuntimeError` due to too many parameters (#2216, @Avasam)
* Fixed broken since Python 3 tokenization in `win32comext.axdebug.codecontainer.pySourceCodeContainer.GetSyntaxColorAttributes` (#2216, @Avasam)
* Fixed a `TypeError` due to incorrect kwargs in `win32comext.axscript.client.pydumper.Register` (#2216, @Avasam)
* Fixed error reporting of file copy failure for for installing debug dlls (#2216, @Avasam)
* Fixed `py.exe -m win32verstamp` command and other quote typos caused by Implied String Concatenation (#2225, @Avasam)
* Fixed tons of quote-related typos in strings, docs and comments (#2271 , @Avasam)
* Fixed VT_SAFEARRAY(VT_RECORD) which were missing the last element (#2247)
* Fixed `MFC redist DLLs not found` by preferring corresponding version but accepting different version (#2248, @andreabravetti)