@@ -22,7 +22,6 @@ import win32com
 
 from . import build
 
-error = "makepy.error"
 makepy_version = "0.5.01"  # Written to generated file.
 
 GEN_FULL = "full"
