@@ -10,7 +10,7 @@ class TLBrowserException(Exception):
     "TypeLib browser internal error"
 
 
-error = TLBrowserException
+error = TLBrowserException  # Re-exported alias
 
 FRAMEDLG_STD = win32con.WS_CAPTION | win32con.WS_SYSMENU
 SS_STD = win32con.WS_CHILD | win32con.WS_VISIBLE
